<resources>
    <string name="app_name">Dictionary App</string>
    <string name="setting">Setting</string>
    <string name="language" translatable="false">language</string>
    <string name="en_language">English</string>
    <string name="per_language">Persian</string>
    <string name="fr_language">French</string>
    <string name="ar_language">Arabic</string>
    <string name="create_word">Create Word</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add_word">add word</string>
    <string name="share">Share</string>
    <string name="pr_menu_language" translatable="false">فارسی</string>
    <string name="en_menu_language" translatable="false">English</string>

</resources>